# dsa

./: .gitignore  CLAUDE.md  Makefile  WARP.md  pyproject.toml  readme.md
docs/: BUILDING.md  SOLVING.md
notes/: NEETCODE-150.md  README.md  cheatsheet.md  ram_model.md  roadmap.md
notes/slides/: ram_model_part1.md  ram_model_part2.md  ram_model_part3.md  ram_model_part4.md  ram_model_part5.md
problems/01-arrays-and-hashing/: README.md
problems/02-two-pointers/: README.md
problems/03-stack/: README.md
problems/04-binary-search/: README.md
problems/05-sliding-window/: README.md
problems/06-linked-list/: README.md
problems/07-trees/: README.md
problems/08-tries/: README.md
problems/09-heap-priority-queue/: README.md
problems/10-backtracking/: README.md
problems/11-graphs/: README.md
problems/12-advanced-graphs/: README.md
problems/13-1d-dp/: README.md
problems/14-2d-dp/: README.md
problems/15-greedy/: README.md
problems/16-intervals/: README.md
problems/17-math-and-geometry/: README.md
problems/18-bit-manipulation/: README.md
scripts/: progress.py  regenerate_stubs.py  review.py
scripts/figures/: _style.py  fig_asymptotic_bounds_o_omega_theta.py  fig_binary_counter_amortized_trace.py  fig_build_heap_linear_level_work.py  fig_comparison_sort_decision_tree.py  fig_dynamic_array_amortized_cost.py  fig_external_memory_model_schematic.py  fig_growth_rate_hierarchy_loglog.py  fig_harmonic_series_integral_bound.py  fig_knapsack_pseudo_polynomial.py  fig_lcs_dp_table_traceback.py  fig_quicksort_pivot_wall.py  (+14 more)
templates/: strip-advanced.lua
(+168 files in other folders)
